Rework the conda management in TrackMate.
- Offer a utility to let the user sets the path to the conda
executable on their system. Stores it in a SciJava Prefs.
- Make a method with defaults, from known installation of conda
flavor.
- Use it the conda exec to build a map from conda env name
to the path of the python executable they are using.
- Rework the conda env list command.